# easyblog

./: .gitignore  .pre-commit-config.yaml  README.md  TODO  config.toml  feedgen.py  generate.py  models.py  pyproject.toml
content/: new.md
theme/: base.html  index.html  index_post_list.html  index_stylesheet.css  post.html  post_stylesheet.css  rss.xml.jinja
theme/css/: styles.css
